Modified home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,8 @@
 
 
 
-<p>Hello World!</p>
+<p>Environmental Students Union Library Catalogue</p>
 <% debugger %>
 <% link_to("My Blog", "http://www.google.ca") %>
 
-<p>Hello World! 2</p>
+<p>-Created using Ruby on Rails. Work in progress.</p>
