--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Environmental Students Union Library Catalogue</h1>
+<p>
+	This website allows students to view the books available at the ENSU library.
+</p>
