--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,5 @@
 <p>
 	This website allows students to view the books available at the ENSU library.
 </p>
+
+<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
