--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -28,7 +28,7 @@ section {
 
 a {
 	color: #09c;
-	text-decodation: none;
+	text-decoration: none;
 }
 
 a:hover {
@@ -94,4 +94,18 @@ a.signup_button {
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
+}
+
+/* Footer */
+
+footer {
+	text-align: center;
+	margin-top: 10px;
+	width: 710px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer nav {
+	float: none;
 }
