--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<h1>Environmental Students Union Library Catalogue</h1>
+<h1>Contact Page</h1>
 <p>
 	This website allows students to view the books available at the ENSU library.
 </p>
