Added the Users page. Sign up now leads to the creation of a new User

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,4 @@
 	This website allows students to view the books available at the ENSU library.
 </p>
 
-<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
