Added a basic User show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 				<%= yield %>
 			</section>
 			<%= render 'layouts/footer' %>
+			<%= if Rails.env.development? then debug(params) end %>
 		</div>
 	</body>
 </htmxl>
