--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 		<title> <%= title %> </title>
 		<%= csrf_meta_tag %>
 		<%= render 'layouts/stylesheets' %>
+		<%= javascript_include_tag "application" %>
 	</head>
 	<body>
 		<div class="container">
@@ -18,4 +19,4 @@
 			<%= if Rails.env.development? then debug(params) end %>
 		</div>
 	</body>
-</htmxl>
+</html>
