--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -160,3 +160,60 @@ ul.users {
 ul.users li {
 	list-style: none;
 }
+
+/* Book styling */
+
+h1.book {
+	margin-bottom: 0.3em;
+}
+
+table.books {
+	margin-top: 1em;
+}
+
+table.books tr {
+	height: 70px;
+}
+
+table.books tr td.gravatar {
+	border-top: 1px solid #ccc;
+	vertical-align: top;
+	width: 50px;
+}
+
+table.books tr td.book {
+	border-top: 1px solid #ccc;
+	vertical-align: top;
+	padding-top: 10px;
+}
+
+table.books tr td.book span.timestamp {
+	display: block;
+	font-size: 85%;
+	color: #666;
+}
+
+div.user_info img {
+	padding-right: 0.1em;
+}
+
+div.user_info a {
+	text-decoration: none;
+}
+
+div.user_info span.user_name {
+	position: absolute;
+}
+
+div.user_info span.books {
+	font-size: 80%;
+}
+
+form.new_book {
+	margin-bottom: 2em;
+}
+
+form.new_book textarea {
+	height: 4em;
+	margin-bottom: 0;
+}
