--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,10 +1,10 @@
-<h1>Sign up</h1>
+<h1>Create book</h1>
 
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@book) do |f| %>
 	<%= render 'shared/error_messages', :object => f.object %>
 	<%= render 'fields', :f => f %>
 	<div class="actions">
-		<%= f.submit "Sign up" %>
+		<%= f.submit "Create" %>
 	</div>
 <% end %>
