Intermediate commit. Books still need more rspec tests. Bugs in system. Added links to all books and new book.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,7 @@
 <h1>All books</h1>
 
+<p><%= link_to "Add new book (placeholder link)", new_book_path %></p>
+
 <%= will_paginate @books %>
 
 	<%# Automatically takes the paginated books instance and iterates over it,
